--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ fastjsonschema==2.19.0
 fonttools==4.45.1
 fqdn==1.5.1
 idna==3.6
+iniconfig==2.0.0
 ipykernel==6.27.1
 ipython==8.18.1
 isoduration==20.11.0
@@ -66,6 +67,7 @@ parso==0.8.3
 pexpect==4.9.0
 Pillow==10.1.0
 platformdirs==4.0.0
+pluggy==1.3.0
 prometheus-client==0.19.0
 prompt-toolkit==3.0.41
 psutil==5.9.6
@@ -74,6 +76,7 @@ pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.17.2
 pyparsing==3.1.1
+pytest==7.4.3
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 python-slugify==8.0.1
@@ -85,10 +88,12 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.7.0
 rpds-py==0.13.2
+scipy==1.11.4
 Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
+-e git+https://github.com/twhentschel/invert-dsf.git@ce92a05fd901b43d43b4b7734f25d62ba928c3d7#egg=src
 stack-data==0.6.3
 terminado==0.18.0
 text-unidecode==1.3
