--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,9 @@ target/
 # Jupyter NB Checkpoints
 .ipynb_checkpoints/
 
+# Jupyter NBs
+.ipynb
+
 # exclude data from source control by default
 /data/
 
