--- a/requirements.txt
+++ b/requirements.txt
@@ -21,10 +21,12 @@ cycler==0.12.1
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
+emcee==3.1.4
 executing==2.0.1
 fastjsonschema==2.19.0
 fonttools==4.45.1
 fqdn==1.5.1
+h5py==3.10.0
 idna==3.6
 iniconfig==2.0.0
 ipykernel==6.27.1
@@ -62,6 +64,7 @@ notebook_shim==0.2.3
 numpy==1.26.2
 overrides==7.4.0
 packaging==23.2
+pandas==2.1.4
 pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.9.0
@@ -80,6 +83,7 @@ pytest==7.4.3
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 python-slugify==8.0.1
+pytz==2023.3.post1
 PyYAML==6.0.1
 pyzmq==25.1.1
 referencing==0.31.1
@@ -93,7 +97,7 @@ Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
--e git+https://github.com/twhentschel/invert-dsf.git@ce92a05fd901b43d43b4b7734f25d62ba928c3d7#egg=src
+-e git+https://github.com/twhentschel/invert-dsf.git@20870f5992f35e30c19852762ac71ff315ba67aa#egg=src
 stack-data==0.6.3
 terminado==0.18.0
 text-unidecode==1.3
@@ -102,7 +106,8 @@ toml==0.10.2
 tornado==6.4
 traitlets==5.14.0
 types-python-dateutil==2.8.19.14
-ueg-dielectric @ git+https://github.com/twhentschel/ueg-dielectric.git@efd9978384d942dca6cf6f1ec1dae41b62537ab7
+tzdata==2023.3
+ueg-dielectric @ git+https://github.com/twhentschel/ueg-dielectric.git@1bdfd40e15e4ab5c025d0e7b759b998ca0d7bbb3
 uri-template==1.3.0
 urllib3==2.1.0
 wcwidth==0.2.12
