--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ click==8.1.7
 comm==0.2.0
 contourpy==1.2.0
 cookiecutter==2.5.0
+corner==2.2.2
 cycler==0.12.1
 debugpy==1.8.0
 decorator==5.1.1
@@ -31,13 +32,18 @@ idna==3.6
 iniconfig==2.0.0
 ipykernel==6.27.1
 ipython==8.18.1
+ipywidgets==8.1.1
 isoduration==20.11.0
+jax==0.4.23
+jaxlib==0.4.23
 jedi==0.19.1
 Jinja2==3.1.2
 json5==0.9.14
 jsonpointer==2.4
 jsonschema==4.20.0
 jsonschema-specifications==2023.11.2
+jupyter==1.0.0
+jupyter-console==6.6.3
 jupyter-events==0.9.0
 jupyter-lsp==2.2.1
 jupyter_client==8.6.0
@@ -45,9 +51,10 @@ jupyter_core==5.5.0
 jupyter_server==2.11.1
 jupyter_server_terminals==0.4.4
 jupyterlab==4.0.9
+jupyterlab-widgets==3.0.9
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.25.2
-jupytext==1.15.2
+jupytext==1.16.0
 kiwisolver==1.4.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
@@ -56,12 +63,15 @@ matplotlib-inline==0.1.6
 mdit-py-plugins==0.4.0
 mdurl==0.1.2
 mistune==3.0.2
+ml-dtypes==0.3.1
 nbclient==0.9.0
 nbconvert==7.11.0
 nbformat==5.9.2
 nest-asyncio==1.5.8
+notebook==7.0.6
 notebook_shim==0.2.3
 numpy==1.26.2
+opt-einsum==3.3.0
 overrides==7.4.0
 packaging==23.2
 pandas==2.1.4
@@ -86,6 +96,8 @@ python-slugify==8.0.1
 pytz==2023.3.post1
 PyYAML==6.0.1
 pyzmq==25.1.1
+qtconsole==5.5.1
+QtPy==2.4.1
 referencing==0.31.1
 requests==2.31.0
 rfc3339-validator==0.1.4
@@ -97,13 +109,14 @@ Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
--e git+https://github.com/twhentschel/invert-dsf.git@d5c17461a50f98383e86101cc69bfd8a1415514d#egg=src
+-e git+https://github.com/twhentschel/invert-dsf.git@08f82611859a249ad61a635166a8d3695ab96072#egg=src
 stack-data==0.6.3
 terminado==0.18.0
 text-unidecode==1.3
 tinycss2==1.2.1
 toml==0.10.2
 tornado==6.4
+tqdm==4.66.1
 traitlets==5.14.0
 types-python-dateutil==2.8.19.14
 tzdata==2023.3
@@ -114,3 +127,4 @@ wcwidth==0.2.12
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.4
+widgetsnbextension==4.0.9
