--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ contourpy==1.2.0
 cookiecutter==2.5.0
 corner==2.2.2
 cycler==0.12.1
+Cython==3.0.8
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
@@ -109,7 +110,7 @@ Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
--e git+https://github.com/twhentschel/invert-dsf.git@08f82611859a249ad61a635166a8d3695ab96072#egg=src
+-e git+https://github.com/twhentschel/invert-dsf.git@1c90fcf866b6cbd17121d8277cf797030e2bf68c#egg=src
 stack-data==0.6.3
 terminado==0.18.0
 text-unidecode==1.3
